--- a/Web/Frontend/main.html
+++ b/Web/Frontend/main.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>ChatGPTürk</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <button type="button" class="btn btn-danger">Base class</button>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <nav class="navbar">
+        <div class="container">
+            <a href="index.html" class="logo">ChatGPTürk</a>
+            <ul class="nav-links">
+                <li><a href="chatbot.html">Chatbot</a></li>
+                <li><a href="#">Text-to-Image</a></li>
+                <li><a href="#">Web Scraping</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main class="container">
+        <h1>Welcome to My Web App</h1>
+        <p>Explore the functionalities from the navbar.</p>
+    </main>
 </body>
 </html>
