"Text to Image" page has been added

--- a/Web/Frontend/main.html
+++ b/Web/Frontend/main.html
@@ -12,7 +12,7 @@
             <a href="index.html" class="logo">ChatGPTürk</a>
             <ul class="nav-links">
                 <li><a href="chatbot.html">Chatbot</a></li>
-                <li><a href="#">Text-to-Image</a></li>
+                <li><a href="text-to-image.html">Text-to-Image</a></li>
                 <li><a href="#">Web Scraping</a></li>
             </ul>
         </div>
