text to image and django backend added

--- a/Web/Frontend/llm_model.html
+++ b/Web/Frontend/llm_model.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>LLM Model</title>
+    <link rel="stylesheet" href="{% static 'css/llm_style.css' %}">
 </head>
 <body>
     <nav class="navbar">
