--- a/Web/Frontend/image_commenter_model.html
+++ b/Web/Frontend/image_commenter_model.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Image Commenter Model</title>
+    <link rel="stylesheet" href="{% static 'css/llm_style.css' %}">
 </head>
 <body>
     <nav class="navbar">
@@ -48,3 +48,4 @@
     </script>
 </body>
 </html>
+
